# abbr

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  install.sh
src/: command.rs  config.rs  database.rs  error.rs  main.rs  shell.rs  util.rs
src/command/: edit.rs  init.rs  new.rs  query.rs
templates/: bash  zsh
