[package]
authors = ["imnotzrus <tu0qnqy3n@gmail.com"]
categories = ["command-line-utilities", "filesystem"]
description = "Abbreviate your terminal command line"
edition = "2021"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
license = "MIT"
version = "0.1.0"
name = "abbr"

[dependencies]
anyhow = "1.0.96"
bincode = "1.3.3"
clap = { version = "4.5.30", features = ["derive"] }
dirs = "6.0.0"
fastrand = "2.3.0"
hashbrown = { version = "0.15.2", features = ["serde", "rayon"] }
ouroboros = "0.18.5"
rinja = { version = "0.3.5", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", default-features = false, features = [
  "fs",
  "user",
] }

[target.'cfg(windows)'.dependencies]
which = "7.0.0"

[build-dependencies]
clap = { version = "4.5.30", features = ["derive"] }

[features]
default = []
nix-dev = []

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true

[package.metadata.deb]
assets = [
  [
    "target/release/abbr",
    "usr/bin/",
    "755",
  ],
  [
    "contrib/completions/abbr.bash",
    "usr/share/bash-completion/completions/abbr",
    "644",
  ],
  [
    "contrib/completions/abbr.fish",
    "usr/share/fish/vendor_completions.d/",
    "664",
  ],
  [
    "contrib/completions/_abbr",
    "usr/share/zsh/vendor-completions/",
    "644",
  ],
  [
    "man/man1/*",
    "usr/share/man/man1/",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/abbr/",
    "644",
  ],
  [
    "CHANGELOG.md",
    "usr/share/doc/abbr/",
    "644",
  ],
  [
    "LICENSE",
    "usr/share/doc/abbr/",
    "644",
  ],
]
extended-description = "Abbreviate your terminal command line"
priority = "optional"
section = "utils"
